<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">LiveDemo3</string>
    <string name="action_settings">Settings</string>

    <string name="recent">刚刚</string>
    <string name="minutes_ago">&#160;分钟前</string>
    <string name="hours_ago">&#160;小时前</string>
    <string name="day_ago">&#160;天前</string>
    <string name="year_ago">&#160;年前</string>

    <string name="user_id">账号:</string>
    <string name="user_name">名字:</string>
    <string name="quality_options">直播品质:</string>
    <string name="sdk_version">SDK:</string>
    <string name="upload_log">上传日志</string>
    <string name="contact_us">联系我们</string>
    <string name="about">关于</string>
    <string name="demo_version">版本:&#160;</string>
    <string name="upload_log_successfully">日志上传成功</string>

    <string name="resolution_prefix">分辨率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="fps_prefix">帧率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="bitrate_prefix">码率&#160;<xliff:g id="value">%1$s</xliff:g></string>

    <string name="app_loading_more">加载中…</string>
    <string name="app_no_more_data">没有更多数据了…</string>
    <string name="live_count"><xliff:g id="value">%1$s</xliff:g>个人在连麦</string>
    <string name="log">日志</string>
    <string name="zego">ZEGO</string>
    <string name="advanced">高级</string>
    <string name="hint_pull_refresh">下拉刷新^_^</string>

    <string name="textOn">开启</string>
    <string name="textOff">关闭</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="publish_setting">设置</string>
    <string name="make_a_title">给直播取一个吸引人的标题</string>
    <string name="go_publish">开始直播</string>
    <string name="test_env">测试环境</string>
    <string name="appid">appID:</string>
    <string name="appkey">appKEY:</string>
    <string name="mute">静音</string>
    <string name="front_camera">前置摄像头</string>
    <string name="camera">开启摄像头</string>
    <string name="speaker">声音</string>
    <string name="mic">麦克风</string>
    <string name="flashlight">手电筒</string>
    <string name="background_music">伴奏</string>
    <string name="beauty">美颜</string>
    <string name="filter">滤镜</string>
    <string name="start_publishing">开始直播</string>
    <string name="request_to_join">请求连麦</string>
    <string name="stop_publishing">停止直播</string>

    <!--broadcast-->
    <string name="hint">提示</string>
    <string name="someone_is_requesting_to_broadcast_allow"><xliff:g id="value">%1$s</xliff:g>&#160;正在请求连麦, 是否同意?"</string>
    <string name="Allow">同意</string>
    <string name="Deny">拒绝</string>
    <string name="your_request_has_been_denied">你的连麦请求被拒绝</string>
    <string name="got_it">知道了</string>
    <string name="do_you_really_want_to_leave">确定要退出直播页面吗</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>

    <!--log-->
    <string name="someone_is_requesting_to_broadcast"><xliff:g id="value">%1$s</xliff:g>:&#160;正在请求连麦</string>
    <string name="request_of_broadcast_has_been_allowed"><xliff:g id="value">%1$s</xliff:g>:&#160;连麦请求被通过</string>
    <string name="request_of_broadcast_has_been_denied"><xliff:g id="value">%1$s</xliff:g>:&#160;连麦请求被拒绝</string>
    <string name="please_wait">请稍后...</string>

    <string name="live_quality">当前质量:&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="full_screen">全屏播放</string>
    <string name="exit_full_screen">退出全屏</string>
    <string name="allow_camera_permission">请开启摄像头权限</string>
    <string name="open_recorder_permission">请开启录音权限</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="game_live_mode">游戏直播</string>
    <string name="mix_stream_mode">混流模式</string>
    <string name="more_anchors_mode">连麦模式</string>
    <string name="single_anchor_mode">单主播模式</string>
    <string name="play_mixstream">播放混流</string>

    <string name="external_capture">外部采集</string>
    <string name="external_render">外部渲染</string>
    <string name="external_filter">外部滤镜</string>
    <string name="hardware_encode">硬件编码</string>
    <string name="hardware_decode">硬件解码</string>
    <string name="rate_control">码率控制</string>
</resources>
